[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/main_menu_bg.png" type="Texture" id=1]
[ext_resource path="res://Main_Menu.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Minecraft-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 538, 358 )
scale = Vector2( 1.24687, 1.24687 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -48.0
margin_right = 25.0
margin_bottom = 37.0
rect_scale = Vector2( 1.50687, 1.30116 )

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 98.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 98.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 98.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
text = "CREDITS"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 98.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 4 )
text = "VOLUME"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
